--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://SerhiiRepinskyi.github.io/filmoteka-team-project",
+  "homepage": "https://GoitStudentsWorks.github.io/filmoteka-team-project-js-groop6",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /filmoteka-team-project/"
+    "build": "parcel build src/*.html --public-url /filmoteka-team-project-js-groop6/"
   },
   "repository": {
     "type": "git",
